# MPGA

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  install.sh
mpga-plugin/cli/: CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
mpga-plugin/cli/.claude/agents/: architect.md  auditor.md  blue-dev.md  green-dev.md  red-dev.md  researcher.md  reviewer.md  scout.md
mpga-plugin/cli/.husky/: pre-commit
mpga-plugin/cli/MPGA/: GRAPH.md  INDEX.md  mpga.config.json
mpga-plugin/cli/src/: cli.ts
mpga-plugin/cli/tests/: conftest.py  test_agent_prompts.py  test_ai_compress.py  test_api_server.py  test_bare_exceptions.py  test_capture_hook.py  test_ci_workflows.py  test_compress.py  test_db_dashboard.py  test_db_dashboard_integration.py  test_db_dashboard_stubs.py  test_db_dashboard_xss.py  test_db_migrations.py  test_db_schema.py  test_dead_code_removal.py  test_design_tokens.py  test_docs_drift_claim.py  test_docs_updated.py  test_dual_search.py  test_eviction.py  test_evidence_bridge.py  test_evidence_placeholders.py  test_export_agents_tier.py  test_export_claude_model.py  test_export_codex_model.py  test_export_cursor_model.py  test_extract.py  test_fts_injection.py  test_hook_export.py  test_index_cmd.py  test_indexed_content_schema.py  test_indexed_search.py  test_large_file_split.py  test_markdown_rendering.py  test_mcp_server.py  test_memory_config.py  test_memory_context.py  test_memory_get.py  test_memory_integration.py  test_memory_search.py  (+31 more)
(+597 files in other folders)
