[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mpga"
version = "1.0.0"
description = "Make Project Great Again — evidence-backed context engineering for AI-assisted development"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ben Reich" }]
keywords = ["context-engineering", "evidence", "tdd", "drift-detection", "ai-coding"]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "python-frontmatter>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
mpga = "mpga.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mpga"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.report]
fail_under = 50
